2007-09-09  Sanel <karijes@users.sourceforge.net>

	* In MimeType added subclass_of() to check mime parents
	* In DesktopFile try_exec(), strncpy known stuff ;)

2007-09-03  Sanel <karijes@users.sourceforge.net>

	* Hopefully better scanning in DirWatch. Still sucks, but less than
	previous version

2007-09-02  Sanel <karijes@users.sourceforge.net>

	* Sound can be run in non-blocking mode via additional thread. Not fully 
	tested.
	* One line less in TODO ;)

2007-09-01  Sanel <karijes@users.sourceforge.net>

	* MessageBox run_plain() behaves as old run()
	* run() now returns button pressed number and closes dialog
	* set_icon() and set_theme_icon() returns status if icon was set
	* ask()/message()/etc. are modal
	* Added fd.o icon names in MessageBox
	* run() and run_plain() in MessageBox accepts flag for dialog centering
	* Removed that silly List to list define; now list is used for STL
	compatibility

2007-08-28  Sanel <karijes@users.sourceforge.net>

	* Added clear parameter to dir_list()
	* Fixed a bug in Config; multiple load() calls would _append_ data, not
	clear previous one. Now it will do opposite. Uh...

2007-08-27  Sanel <karijes@users.sourceforge.net>

	* Added MessageBox class
	* Added inited() to IconTheme and SoundSystem
	* message(), ask(), input(), alert(), password() in MessageBox.cpp
	* Dumped Ask.{cpp,h}

2007-08-19  Sanel <karijes@users.sourceforge.net>

	* String code beautify (remove this before commit)
	* MimeType (likewise)
	* MimeType will now correctly use XDG_DATA_DIRS to search for comments
	* Previous MimeType addon sucked; reimplemented better in xdgmime
	via xdg_mime_find_data(). MimeType changed to reflect this
	* Added efile as sample
	* GetOS added to Jamrules

2007-08-18  Sanel <karijes@users.sourceforge.net>

	* Added regex copy (from sed) with few compilation/warning modifications
	* split() in regex with tests
	* Documented Regex class
	* More tests in tests/regex.cpp
	* rx/regexec.c some warning cleanup