@@ -1,3 +1,7 @@
+2007-09-11  Sanel <karijes@users.sourceforge.net>
+
+	* Test in datetime.cpp for Vedran's fix in operator>()
+
 2007-09-09  Sanel <karijes@users.sourceforge.net>
 
 	* In MimeType added subclass_of() to check mime parents
